--- a/setup.cfg
+++ b/setup.cfg
@@ -1,35 +1,35 @@
-# This file is used to configure your project.
-# Read more about the various options under:
-# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
-
 [metadata]
-name = hyde
-description = Add a short description here!
-author = coquelin77
-author_email = daniel.coquelin@gmail.com
-license = MIT
+name = hyde-toolbox
+description = Hyperspectral Denoising algorithm toolbox in Python
+version = 0.1
+author = Helmholtz-AI-Energy
+author_email = consultant-helmholtz.ai@kit.edu
+license = BSD-3-Clause
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/pyscaffold/pyscaffold/
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
-#    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
-#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
-#    Download = https://pypi.org/project/PyScaffold/#files
-#    Twitter = https://twitter.com/PyScaffold
+#     Documentation = https://pyscaffold.org/
+    Source = https://github.com/Helmholtz-AI-Energy/HyDe
+    Changelog = https://github.com/Helmholtz-AI-Energy/HyDe/blob/main/CHANGELOG.md
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
+requires_python = >= 3.7
 classifiers =
     Development Status :: 4 - Beta
+    License :: OSI Approved :: BSD License
     Programming Language :: Python
-
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.7
+    Intended Audience :: Science/Research
+    Topic :: Scientific/Engineering
 
 [options]
 zip_safe = False
@@ -38,16 +38,14 @@ include_package_data = True
 package_dir =
     =src
 
-# Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
-
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    numpy>=1.13.0
+    torch>=1.7.0
 
 [options.packages.find]
 where = src
@@ -108,7 +106,7 @@ formats = bdist_wheel
 [flake8]
 # Some sane defaults for the code style checker flake8
 max_line_length = 100
-extend_ignore = E203, W503
+ignore = E203, E402, W503, E501, F403, F401
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
 exclude =
@@ -117,6 +115,14 @@ exclude =
     dist
     .eggs
     docs/conf.py
+    
+[pycodestyle]
+max-line-length = 100
+ignore = E203, E402, W503
+
+[pydocstyle]
+add-select = D417
+add-ignore = D105, D107, D200, D203, D205, D212, D301, D400, D401, D402, D410, D415
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
