added BM3D functionality. not fully working yet, 2nd step shows issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -108,7 +108,7 @@ formats = bdist_wheel
 [flake8]
 # Some sane defaults for the code style checker flake8
 max_line_length = 100
-extend_ignore = E203, W503
+extend_ignore = E203, W503, F401, F403
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
 exclude =
