ignore invalid escape characters for flake8/precommit

--- a/setup.cfg
+++ b/setup.cfg
@@ -106,7 +106,7 @@ formats = bdist_wheel
 [flake8]
 # Some sane defaults for the code style checker flake8
 max_line_length = 100
-ignore = E203, E402, W503, E501, F403, F401
+ignore = E203, E402, W503, E501, F403, F401, W605
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
 exclude =
@@ -115,7 +115,7 @@ exclude =
     dist
     .eggs
     docs/conf.py
-    
+
 [pycodestyle]
 max-line-length = 100
 ignore = E203, E402, W503
