--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ platforms = any
 
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
-requires_python = >= 3.7
+requires_python = >= 3.6
 classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: BSD License
@@ -28,6 +28,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.6
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering
 
@@ -45,7 +46,9 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     numpy>=1.13.0
-    torch>=1.7.0
+    torch>=1.8.0
+    pytorch-wavelets>=1.3.0
+    PyWavelets>=1.1.1
 
 [options.packages.find]
 where = src
