made setup more explicit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = hyde-toolbox
+name = hyde
 description = Hyperspectral Denoising algorithm toolbox in Python
-version = 0.1
+version = 0.1.0
 author = Helmholtz-AI-Energy
 author_email = consultant-helmholtz.ai@kit.edu
 license = BSD-3-Clause
