package release changes + better readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = hyde
 description = Hyperspectral Denoising algorithm toolbox in Python
-version = 0.1.0
+version = 0.1.1-0
 author = Helmholtz-AI-Energy
 author_email = consultant-helmholtz.ai@kit.edu
 license = BSD-3-Clause
@@ -47,7 +47,8 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     numpy>=1.13.0
     torch>=1.8.0
-    pytorch-wavelets>=1.3.0
+;    pytorch-wavelets @ git+https://github.com/fbcotter/pytorch_wavelets@v1.3.0#egg=pytorch-wavelets
+;    pytorch-wavelets>=1.3.0
     PyWavelets>=1.1.1
 
 [options.packages.find]
