--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = hyde-images
 description = Hyperspectral Denoising algorithm toolbox in Python
-version = 0.4.0
+version = 0.4.3
 author = Helmholtz-AI-Energy
 author_email = consultant-helmholtz.ai@kit.edu
 license = BSD-3-Clause
@@ -54,6 +54,7 @@ install_requires =
 where = src
 exclude =
     tests
+    pretrained-models
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
